--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author = Yuan He (KRR-Oxford)
 author_email = yuan.he@cs.ox.ac.uk
 license = Apache License 2.0
 license_files = LICENSE
-description = Hierarchy encoding with transformers.
+description = Language models as hierarchy encoders.
 long_description = file: README.md
 long_description_content_type = text/markdown
 # url = https://krr-oxford.github.io/DeepOnto/#/
