--- a/setup.cfg
+++ b/setup.cfg
@@ -35,5 +35,5 @@ install_requires =
 [options.package_data]
 * = *.jar, *.yaml, lib/*.jar
 
-[options.packages.find]
-where = hierarchy_transformers
+# [options.packages.find]
+# where = hierarchy_transformers
