set deeponto as an optional dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hierarchy_transformers
-version = 0.0.1
+version = 0.0.2
 author = Yuan He (KRR-Oxford)
 author_email = yuan.he@cs.ox.ac.uk
 license = Apache License 2.0
@@ -23,7 +23,6 @@ python_requires = >=3.8
 include_package_data = True
 install_requires =
     datasets
-    deeponto>=0.8.8
     geoopt==0.5.0
     scikit_learn
     seaborn
@@ -31,6 +30,10 @@ install_requires =
     torch
     tqdm
     transformers[torch]
+
+[options.extras_require]
+onto = 
+    deeponto>=0.8.8
 
 [options.package_data]
 * = *.jar, *.yaml, lib/*.jar
