--- a/setup.cfg
+++ b/setup.cfg
@@ -32,8 +32,17 @@ install_requires =
     tqdm
     transformers[torch]
 
+[options.extras_require]
+dev =
+    pytest
+    pytest-cov
+
 [options.package_data]
 * = *.jar, *.yaml, lib/*.jar
 
 [options.packages.find]
 where = src
+
+[tool:pytest]
+testpaths = tests
+addopts = --verbose --cov=your_project_name --cov-report=term-missing
