--- a/setup.cfg
+++ b/setup.cfg
@@ -22,15 +22,11 @@ packages = find:
 python_requires = >=3.8
 include_package_data = True
 install_requires =
-    datasets
+    sentence_transformers[train]==3.2.1
     deeponto>=0.8.8
     geoopt==0.5.0
-    scikit_learn
+    scipy==1.13.1
     seaborn
-    sentence_transformers
-    torch
-    tqdm
-    transformers[torch]
 
 [options.extras_require]
 dev =
