--- a/setup.cfg
+++ b/setup.cfg
@@ -42,3 +42,6 @@ where = src
 [tool:pytest]
 testpaths = tests
 addopts = --verbose --cov=your_project_name --cov-report=term-missing
+env =
+    MODEL_NAMES = "Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun", "Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT"
+    DATASET_NAMES = "Hierarchy-Transformers/WordNetNoun"
