--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
 dev =
     pytest
     pytest-cov
+    pytest-env
 
 [options.package_data]
 * = *.jar, *.yaml, lib/*.jar
@@ -41,7 +42,7 @@ where = src
 
 [tool:pytest]
 testpaths = tests
-addopts = --verbose --cov=your_project_name --cov-report=term-missing
+addopts = --verbose --cov=hierarchy_transformers --cov-report=term-missing
 env =
-    MODEL_NAMES = "Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun", "Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT"
-    DATASET_NAMES = "Hierarchy-Transformers/WordNetNoun"
+    MODEL_NAMES = Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT
+    DATASET_NAMES = Hierarchy-Transformers/WordNetNoun
