--- a/setup.cfg
+++ b/setup.cfg
@@ -45,4 +45,4 @@ testpaths = tests
 addopts = --verbose --cov=hierarchy_transformers --cov-report=term-missing
 env =
     MODEL_NAMES = Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT
-    DATASET_NAMES = Hierarchy-Transformers/WordNetNoun
+    DATASET_NAMES = Hierarchy-Transformers/WordNetNoun,Hierarchy-Transformers/SnomedCT
