--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-sentence_transformers[train]>=3.3.0,<=3.3.1
+sentence_transformers[train]>=3.4.0.dev0
 deeponto>=0.8.8
 geoopt==0.5.0
 scipy==1.13.1
