--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ packages = find:
 python_requires = >=3.8
 include_package_data = True
 install_requires =
-    sentence_transformers[train]>=3.0.0,<=3.3.1
+    sentence_transformers[train]>=3.4.0.dev0
     deeponto>=0.8.8
     geoopt==0.5.0
     scipy==1.13.1
