--- a/setup.cfg
+++ b/setup.cfg
@@ -44,5 +44,5 @@ where = src
 testpaths = tests
 addopts = --verbose --cov=hierarchy_transformers --cov-report=term-missing
 env =
-    MODEL_NAMES = Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT
-    DATASET_NAMES = Hierarchy-Transformers/WordNetNoun,Hierarchy-Transformers/SnomedCT
+    MODEL_PATHS = Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT
+    DATASET_PATHS = Hierarchy-Transformers/WordNetNoun,Hierarchy-Transformers/SnomedCT
