--- a/scripts/training/static_embed/config_static.yaml
+++ b/scripts/training/static_embed/config_static.yaml
@@ -2,11 +2,13 @@
 dataset_path: "data/wordnet-multi"
 negative_type: "random"
 
-# training config
+# training config (on hyperbolic distance loss)
 embed_dim: 200
-num_train_epochs: 10
+num_train_epochs: 200
 train_batch_size: 256
 eval_batch_size: 512
 learning_rate: 0.01
 warmup_epochs: 10
-num_post_train_epochs: -1  # post-train with hyperbolic entailment cone loss
+
+# post-training config (on hyperbolic entailment cone loss)
+num_post_train_epochs: 200  
