--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,89 @@
+[project]
+name = "hierarchy_transformers"
+version = "0.1.1.test"
+description = "Language models as hierarchy encoders."
+readme = "README.md"
+readme-content-type = "text/markdown"
+authors = [
+    {name = "Yuan He", email = "yuan.he@cs.ox.ac.uk"}
+]
+maintainers = [
+    { name = "Yuan He", email = "yuan.he@cs.ox.ac.uk" }
+]
+license = {text = "Apache License 2.0"}
+classifiers = [
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: Apache Software License",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
+requires-python = ">=3.9"
+keywords = [
+    "Language Models", 
+    "Transformer Encoders", 
+    "Hierarchy Encoders", 
+    "Hierarchy Embedding",
+    "Hyperbolic Embedding"
+]
+dependencies = [
+    "sentence_transformers[train]>=3.4.0.dev0",
+    "deeponto>=0.9.2",
+    "geoopt==0.5.0",
+    "scipy==1.13.1",
+    "seaborn"
+]
+
+[project.urls]
+Homepage = "https://krr-oxford.github.io/HierarchyTransformers/"
+Repository = "https://github.com/KRR-Oxford/HierarchyTransformers"
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-cov",
+    "pytest-env"
+]
+
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+"*" = ["*.jar", "*.yaml", "lib/*.jar"]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+include-package-data = true
+
+[tool.ruff]
+line-length = 119
+fix = true
+
+[tool.ruff.lint]
+select = ["E", "F", "W", "I", "UP"]
+# Skip `E731` (do not assign a lambda expression, use a def)
+ignore = [
+    # LineTooLong
+    "E501",
+    # DoNotAssignLambda
+    "E731"
+]
+
+[tool.ruff.lint.isort]
+known-third-party = ["datasets"]
+required-imports = ["from __future__ import annotations"]
+
+[tool.pytest.ini-options]
+testpaths = ["tests"]
+addopts = "--verbose --cov=hierarchy_transformers --cov-report=term-missing"
+
+[tool.pytest.env]
+MODEL_PATHS = "Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT"
+DATASET_PATHS = "Hierarchy-Transformers/WordNetNoun,Hierarchy-Transformers/SnomedCT"
