[fix] pytest env

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ required-imports = ["from __future__ import annotations"]
 [tool.pytest.ini-options]
 testpaths = ["tests"]
 addopts = "--verbose --cov=hierarchy_transformers --cov-report=term-missing"
-
-[tool.pytest.env]
-MODEL_PATHS = "Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT"
-DATASET_PATHS = "Hierarchy-Transformers/WordNetNoun,Hierarchy-Transformers/SnomedCT"
+env = [
+    "MODEL_PATHS=Hierarchy-Transformers/HiT-MiniLM-L12-WordNetNoun,Hierarchy-Transformers/HiT-MiniLM-L12-SnomedCT",
+    "DATASET_PATHS=Hierarchy-Transformers/WordNetNoun,Hierarchy-Transformers/SnomedCT"
+]
