--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hierarchy_transformers"
-version = "0.1.1"
+version = "0.1.2.dev0"
 description = "Language models as hierarchy encoders."
 readme = "README.md"
 authors = [
@@ -29,9 +29,9 @@ keywords = [
     "Hyperbolic Embedding"
 ]
 dependencies = [
-    "sentence_transformers[train]>=3.4.0.dev0",
+    "sentence_transformers[train]>=3.4.0",
     "deeponto>=0.9.2",
-    "geoopt==0.5.0",
+    "geoopt>=0.5.0",
     "scipy==1.13.1",
     "seaborn"
 ]
